# caribou_hi

./: .gitattributes  .readthedocs.yaml  Dockerfile  LICENSE  README.md  environment-dev.yml  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
caribou/: __init__.py  base_model.py  cluster_posterior.py  hierarchical_model.py  hierarchical_thermal_model.py  optimize.py  plots.py  simple_model.py  thermal_model.py  utils.py
caribou_hi/: __init__.py  _version.py  absorption_model.py  absorption_physical_model.py  emission_absorption_ff_model.py  emission_absorption_matched_model.py  emission_absorption_mismatched_model.py  emission_absorption_model.py  emission_absorption_physical_model.py  emission_model.py  emission_physical_model.py  hi_model.py  hi_physical_model.py  physics.py
docs/: requirements.txt
docs/source/: caribou_hi.rst  conf.py  index.rst  modules.rst
docs/source/notebooks/: absorption_model.ipynb  emission_absorption_model.ipynb  emission_model.ipynb  optimization.ipynb
example/: example_data.pkl  model_comparison.ipynb  optimization.ipynb
example/figures/: hierarchical_model.gv  hierarchical_thermal_model.gv  simple_model.gv  thermal_model.gv
tests/: test_aborption_model.py  test_emission_absorption_ff_model.py  test_emission_absorption_matched_model.py  test_emission_absorption_mismatched_model.py  test_emission_absorption_model.py  test_emission_model.py  test_hi_model.py  test_hi_physical_model.py  test_physics.py
